# dotconfig-hub

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: project-mapping-feature.md
.github/workflows/: claude.yml  publish.yml
minimal_template/: .gitignore
my_project_init_template/: .gitignore
src/dotconfig_hub/: __init__.py  cli.py  compare.py  config.py  diff.py  project_config.py  project_mapping.py  sync.py  utils.py
tests/: test_backup_rotation.py  test_bak_file_exclusion.py  test_cli_setup.py  test_delete_with_backup.py  test_directory_filtering.py  test_dotfile_glob.py  test_file_rename.py  test_global_config.py  test_project_mapping.py
