[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dotconfig-hub"
version = "0.0.0-dev"
description = "Central management and distribution tool for favorite dotfiles and configuration templates"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["dotfiles", "configuration", "sync", "templates", "development-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]
authors = [
    { name = "hasegama", email = "40445443+hasegama@users.noreply.github.com" }
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "gitpython>=3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "black>=25.1.0",
    "pytest>=8.2.0",
    "pre-commit>=3.7.1",
]

[project.urls]
Homepage = "https://github.com/hasegama/dotconfig-hub"

[project.scripts]
dotconfig-hub = "dotconfig_hub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# ruff
[tool.ruff]
line-length    = 88
target-version = "py312"
exclude        = ["dist", "build", ".venv", ".git"]

# lint
[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "D",
  "EM",
  "PT",
  "ANN"
]

ignore = [
    "D104",
    "D105",
    "D203",
    "D213",
    "D100",
    "E501",
    "EM101", 
    'B006', 
    'D400', 
    'D415', 
]

# format
[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

# black
[tool.black]
line-length    = 88
target-version = ["py312"]
preview        = false